<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/menu_tab">
    <group android:checkableBehavior="single">
        <item android:icon="@drawable/ic_settings_24dp" android:id="@+id/nav_config" android:title="@string/action_config" />
        <item android:icon="@drawable/ic_vpn_key_black_24dp" android:id="@+id/nav_auth" android:title="@string/action_auth" />
        <item android:icon="@drawable/ic_autorenew_24dp" android:id="@+id/nav_clear" android:title="@string/action_clear" />
        <item android:icon="@drawable/ic_exit_to_app_24dp" android:id="@+id/nav_close" android:title="@string/action_close" />
    </group>
    <item android:title="@string/action_divider">
        <menu>
            <item android:icon="@drawable/ic_menu_share" android:id="@+id/nav_share" android:title="@string/action_share" />
        </menu> />
</menu>
