<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:id="@+id/linearLayout" android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/package_inspector" />
        <Space android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0xe01" />
        <Switch android:id="@+id/only_user_app_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/fragment_main_only_user" />
        <ExpandableListView android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/appsListView" android:background="0x106000b" android:layout_width="match_parent" android:layout_height="wrap_content" />
        <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:id="@+id/txtAppSelected" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="..." />
        <Space android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0xe01" />
        <View android:background="#375a7f" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x201" />
        <Space android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0xe01" />
        <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:id="@+id/txtModule" android:background="0x1060017" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/module_disabled" />
        <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:id="@+id/txtServer" android:background="0x1060017" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_stopped" />
        <Space android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0xe01" />
        <View android:background="#375a7f" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x201" />
        <Space android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0xe01" />
        <TextView android:id="@+id/textView7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fragment_config_started" />
        <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:id="@+id/txtHost" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="http://192.168.1.30:8008" />
        <TextView android:id="@+id/textView9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fragment_config_access_adb" />
        <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:id="@+id/txtAdb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="adb forward tcp:8008 tcp:8008" />
        <Space android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0xe01" />
        <Button android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/btnLaunchApp" android:background="@drawable/btn_shape" android:layout_width="UNKNOWN_DATA_0x6d01" android:layout_height="wrap_content" android:text="@string/fragment_config_launch" style="?unknown_attr_ref: 1010049" />
        <LinearLayout android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" /> />
</RelativeLayout>
