<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:id="@+id/linearLayout" android:layout_width="match_parent" android:layout_height="match_parent" android:weightSum="1.0" android:layout_alignParentLeft="true" android:layout_alignParentStart="true">
        <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fragment_config_server_host" />
        <Space android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0xe01" />
        <RadioGroup android:orientation="vertical" android:id="@+id/radiogroup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
        <Space android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0xe01" />
        <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fragment_config_server_port" />
        <EditText android:id="@+id/txtPort" android:layout_width="match_parent" android:layout_height="wrap_content" android:ems="10" android:inputType="number|numberSigned|numberDecimal|numberPassword|phone" />
        <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fragment_config_web_socket_port" />
        <EditText android:id="@+id/txtWSPort" android:layout_width="match_parent" android:layout_height="wrap_content" android:ems="10" android:inputType="number|numberSigned|numberDecimal|numberPassword|phone" />
        <Button android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/btnNewPort" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fragment_config_btn_apply" style="android:attr/buttonStyleSmall" />
    </LinearLayout>
</FrameLayout>
